changed name of template from IssueView.vm to ViewIssue.vm.

--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -15,7 +15,7 @@
     <tr>
      <td width="100" id="leftcol">
       <div id="projnav">
-      <form action="$link.setPage("IssueView.vm")" method="get">
+      <form action="$link.setPage("ViewIssue.vm")" method="get">
    Issue# <input type="text" name="id" size="8" maxlength="255" />
       <input type="submit" name="Submit" value="Find" />
    </form>
