fix page.getTitle to page.Title

--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -7,7 +7,7 @@ $page.setTitle("Enter New Issue")
 #set ($issue = $user.ReportingIssue)
 #set ($attrValues = $issue.ModuleAttributeValuesMap)
 
-<h2>$page.getTitle</h2>
+<h2>$page.Title</h2>
 <form name="ReportForm" method="get" action="$action">
 
 <p class="functnbar">
