--- a/src/templates/screens/Links.vm
+++ b/src/templates/screens/Links.vm
@@ -9,9 +9,10 @@ $page.setTitle("Scarab Links")
 <li><a href="$link.setPage("Register.vm")">Register.vm</a></li>
 <li><a href="$link.setPage("Login.vm")">Login.vm</a></li>
 <li><a href="$link.setPage("ViewIssue.vm").addPathInfo("id", 1)">ViewIssue.vm?id=1</a> (Added ?id=1 at the end of the URL)</li>
-<li><a href="$link.setPage("Search.vm")">Search.vm</a></li>
-<li><a href="$link.setPage("entry,Wizard1.vm")">Enter Issue.vm</a></li>
-<li><a href="$link.setPage("entry,Wizard3.vm")">Enter Issue.vm (no deduplicate)</a></li>
+<li><a href="$link.setPage("Search.vm")">Custom Query</a></li>
+<li><a href="$link.setPage("AdvancedQuery.vm")">Advanced Query (not working)</a></li>
+<li><a href="$link.setPage("entry,Wizard1.vm")">Enter Issue</a></li>
+<li><a href="$link.setPage("entry,Wizard3.vm")">Enter Issue (one-step)</a></li>
 <li><a href="$link.setPage("ConfigureIssueList.vm").addPathInfo("nextTemplate", "Links.vm")">Configure Issue List</a></li>
 <li><a href="$link.setPage("AssignIssue.vm").addPathInfo("issue_0id","100").addPathInfo("intake-grp","issue").addPathInfo("issue","_0")">Assign Issue</a></li>
 </ul>
